--- a/index.html
+++ b/index.html
@@ -7,13 +7,48 @@
     <title>MY KINGDOM</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
-    <script src="main.js"></script>
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
 </head>
 
 <body>
-    <h1>!ATTENTION!</h1>
-    <h1>THE FLAT EARTH SOCIETY</h1>
-    <h1>WAS HERE</h1>
+    <div class="wrapper">
+        <div class="container-top">
+            <header>
+                <span class="title">Lukáš Kubík</span><br>
+                <span class="motto">Život je life...</span>
+            </header>
+            <nav>
+                <a href="index.html" class="nav-item-current">DOMŮ</a>
+                <a href="about.html" class="nav-item">O MNĚ</a>
+                <a href="career.html" class="nav-item">KARIÉRA</a>
+                <a href="inspiration.html" class="nav-item">INSPIRACE</a>
+                <a href="contact.html" class="nav-item">KONTAKT</a>
+            </nav>
+        </div>
+
+        <main>
+            <h1>Vítej cizinče!</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas sit amet pretium urna. Vivamus
+                venenatis velit nec neque ultricies, eget elementum magna tristique. Quisque vehicula, risus eget
+                aliquam placerat, purus leo tincidunt eros, eget luctus quam orci in velit. Praesent scelerisque
+                tortor
+                sed accumsan convallis.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas sit amet pretium urna. Vivamus
+                venenatis velit nec neque ultricies, eget elementum magna tristique. Quisque vehicula, risus eget
+                aliquam placerat, purus leo tincidunt eros, eget luctus quam orci in velit. Praesent scelerisque
+                tortor
+                sed accumsan convallis.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas sit amet pretium urna. Vivamus
+                venenatis velit nec neque ultricies, eget elementum magna tristique. Quisque vehicula, risus eget
+                aliquam placerat, purus leo tincidunt eros, eget luctus quam orci in velit. Praesent scelerisque
+                tortor
+                sed accumsan convallis.</p>
+        </main>
+
+        <footer>
+            <p class="copyright">Vytvořeno s nehynoucí láskou<br> &copy;2018 Lukáš Kubík</p>
+        </footer>
+    </div>
 </body>
 
 </html>
