--- a/index.html
+++ b/index.html
@@ -3,8 +3,11 @@
 
 <head>
     <meta charset="utf-8" />
+    <meta name="description" content="Osobní stránky služící jako webová prezentace života a díla Lukáše Kubíka">
+    <meta name="keywords" content="Lukáš Kubík, osobní stránky, školní projekt">
+    <meta name="author" content="Lukáš Kubík @lukazko">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>MY KINGDOM</title>
+    <title>Lukáš Kubík | Osobní stránky</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
@@ -14,8 +17,7 @@
     <div class="wrapper">
         <div class="container-top">
             <header>
-                <span class="title">Lukáš Kubík</span><br>
-                <span class="motto">Život je life...</span>
+                <a href="index.html" class="title">Lukáš Kubík</a><br>
             </header>
             <nav>
                 <a href="index.html" class="nav-item-current">DOMŮ</a>
@@ -27,22 +29,24 @@
         </div>
 
         <main>
-            <h1>Vítej cizinče!</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas sit amet pretium urna. Vivamus
-                venenatis velit nec neque ultricies, eget elementum magna tristique. Quisque vehicula, risus eget
-                aliquam placerat, purus leo tincidunt eros, eget luctus quam orci in velit. Praesent scelerisque
-                tortor
-                sed accumsan convallis.</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas sit amet pretium urna. Vivamus
-                venenatis velit nec neque ultricies, eget elementum magna tristique. Quisque vehicula, risus eget
-                aliquam placerat, purus leo tincidunt eros, eget luctus quam orci in velit. Praesent scelerisque
-                tortor
-                sed accumsan convallis.</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas sit amet pretium urna. Vivamus
-                venenatis velit nec neque ultricies, eget elementum magna tristique. Quisque vehicula, risus eget
-                aliquam placerat, purus leo tincidunt eros, eget luctus quam orci in velit. Praesent scelerisque
-                tortor
-                sed accumsan convallis.</p>
+            <div class="welcome">
+                <h1>Vítej cizinče!</h1>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas sit amet pretium urna. Vivamus
+                    venenatis velit nec neque ultricies, eget elementum magna tristique. Quisque vehicula, risus eget
+                    aliquam placerat, purus leo tincidunt eros, eget luctus quam orci in velit. Praesent scelerisque
+                    tortor
+                    sed accumsan convallis.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas sit amet pretium urna. Vivamus
+                    venenatis velit nec neque ultricies, eget elementum magna tristique. Quisque vehicula, risus eget
+                    aliquam placerat, purus leo tincidunt eros, eget luctus quam orci in velit. Praesent scelerisque
+                    tortor
+                    sed accumsan convallis.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas sit amet pretium urna. Vivamus
+                    venenatis velit nec neque ultricies, eget elementum magna tristique. Quisque vehicula, risus eget
+                    aliquam placerat, purus leo tincidunt eros, eget luctus quam orci in velit. Praesent scelerisque
+                    tortor
+                    sed accumsan convallis.</p>
+            </div>
         </main>
 
         <footer>
