--- a/career.html
+++ b/career.html
@@ -3,29 +3,54 @@
 
 <head>
     <meta charset="utf-8" />
+    <meta name="description" content="Osobní stránky služící jako webová prezentace života a díla Lukáše Kubíka">
+    <meta name="keywords" content="Lukáš Kubík, osobní stránky, školní projekt">
+    <meta name="author" content="Lukáš Kubík @lukazko">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>MY KINGDOM</title>
+    <title>Lukáš Kubík | Kariéra</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
 </head>
 
 <body>
-    <main>
-        <div class="column">
-            <h2>Column</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas sit amet pretium urna. Vivamus
-                venenatis velit nec neque ultricies, eget elementum magna tristique. Quisque vehicula, risus eget
-                aliquam placerat, purus leo tincidunt eros, eget luctus quam orci in velit. Praesent scelerisque tortor
-                sed accumsan convallis.</p>
+    <div id="wrapper">
+        <div class="container-top">
+            <header>
+                <a href="index.html" class="title">Lukáš Kubík</a><br>
+            </header>
+            <nav>
+                <a href="index.html" class="nav-item">DOMŮ</a>
+                <a href="about.html" class="nav-item">O MNĚ</a>
+                <a href="career.html" class="nav-item-current">KARIÉRA</a>
+                <a href="inspiration.html" class="nav-item">INSPIRACE</a>
+                <a href="contact.html" class="nav-item">KONTAKT</a>
+            </nav>
         </div>
-        <div class="column">
-            <h2>Column</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas sit amet pretium urna. Vivamus
-                venenatis velit nec neque ultricies, eget elementum magna tristique. Quisque vehicula, risus eget
-                aliquam placerat, purus leo tincidunt eros, eget luctus quam orci in velit. Praesent scelerisque tortor
-                sed accumsan convallis.</p>
-        </div>
-    </main>
+
+        <main>
+            <div class="column">
+                <h2>Column</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas sit amet pretium urna. Vivamus
+                    venenatis velit nec neque ultricies, eget elementum magna tristique. Quisque vehicula, risus eget
+                    aliquam placerat, purus leo tincidunt eros, eget luctus quam orci in velit. Praesent scelerisque
+                    tortor
+                    sed accumsan convallis.</p>
+            </div>
+            <div class="column">
+                <h2>Column</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas sit amet pretium urna. Vivamus
+                    venenatis velit nec neque ultricies, eget elementum magna tristique. Quisque vehicula, risus eget
+                    aliquam placerat, purus leo tincidunt eros, eget luctus quam orci in velit. Praesent scelerisque
+                    tortor
+                    sed accumsan convallis.</p>
+            </div>
+        </main>
+
+        <footer>
+            <p class="copyright">Vytvořeno s nehynoucí láskou<br> &copy;2018 Lukáš Kubík</p>
+        </footer>
+    </div>
 </body>
 
 </html>
